GNOME Bugzilla – Bug 670654
Possible dereference through a stale pointer
Last modified: 2012-02-23 09:58:52 UTC
The "cursor" device for my Graphire4 was not moving the mouse cursor on screen. On further inspection, the cause was narrowed down to bogus values for the 'Wacom Tablet Area' property. git-bisect shows commit 152a5c43 responsible. It appears that we're calling g_variant_unref too early, leading to memory being re-used for other purposes before the call out to the driver finishes.
Created attachment 208225 [details] [review] wacom: Unref only when done with variables The GVariants provided to set_area and set_presssurecurve are unref-ed before the final use of the reference.
Attachment 208225 [details] pushed as e1ae588 - wacom: Unref only when done with variables