wacom: Unref only when done with variables

The GVariants provided to set_area and set_presssurecurve are
unref-ed before the final use of the reference.

https://bugzilla.gnome.org/show_bug.cgi?id=670654